BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Assessment__c.object
<CustomObject>
    <fields>
        <fullName>If_other_specify_percentage_BMS__c</fullName>
        <label>If other, specify percentage</label>
        <picklist>
            <picklistValues>
                <fullName>0-10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61-70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>71-80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_Placed_on_YERVOY_BMS__c</fullName>
        <description>How many unresectable or metastatic melanoma patients have the HCP placed on YERVOY since launch?</description>
        <label>Placed on YERVOY Since Lauch</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Individual_Seen_Since_YERVOY_Launch_BMS__c</fullName>
        <description>How many unresectable or metastatic melanoma patients have the HCP seen since YERVOY launch?</description>
        <label>Seen Since YERVOY Launch</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inflntl_in_practices_thrpy_decisions_BMS__c</fullName>
        <inlineHelpText>How influential is this prescriber in the practice&apos;s therapy decisions?</inlineHelpText>
        <label>Inflntl in practice&apos;s thrpy decisions?</label>
        <picklist>
            <picklistValues>
                <fullName>Very influential - practice leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat influential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Influential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influential_in_the_treatment_of_CML_BMS__c</fullName>
        <inlineHelpText>Is this prescriber influential in the treatment of CML?</inlineHelpText>
        <label>Influential in the treatment of CML?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (National Influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (Regional Influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (Local Influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influential_in_the_treatment_of_CRC_BMS__c</fullName>
        <inlineHelpText>Is this prescriber influential in the treatment of CRC?</inlineHelpText>
        <label>Influential in the treatment of CRC?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (Regional Influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (Local Influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influential_in_trtmnt_Breast_Cancer_BMS__c</fullName>
        <inlineHelpText>Is the prescriber influential in the treatment of metastatic Breast Cancer?</inlineHelpText>
        <label>Influential in trtmnt of Breast Cancer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (national influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (local influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (within account)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influential_outside_of_the_practice_BMS__c</fullName>
        <inlineHelpText>How influential is this prescriber outside the practice?</inlineHelpText>
        <label>Influential outside of the practice?</label>
        <picklist>
            <picklistValues>
                <fullName>Nationally influential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regionally influential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locally influential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not influential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inluential_in_the_treatment_of_SCCHN_BMS__c</fullName>
        <inlineHelpText>Is the prescriber influential in the treatment of SCCHN?</inlineHelpText>
        <label>Influential in the treatment of SCCHN?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (national influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (regional influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (within account)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Irinotecan_as_first_line_of_therapy_BMS__c</fullName>
        <inlineHelpText>How frequently does this prescriber use Irinotecan in the first line of therapy?</inlineHelpText>
        <label>Irinotecan as first line of therapy?</label>
        <picklist>
            <picklistValues>
                <fullName>Almost Always</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrequently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almost Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_HCP_influential_within_BMS__c</fullName>
        <label>Is this HCP influential within?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Their own practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locally in their community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With their regional Colleagues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nationally</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knowledge_to_manage_adverse_YEVOY_BMS__c</fullName>
        <inlineHelpText>HCP has knowledge necessary to manage adverse events associated with YERVOY? (Choose all that apply)</inlineHelpText>
        <label>Knowledge to manage adverse events?</label>
        <picklist>
            <picklistValues>
                <fullName>Based on involvement in Clinical trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Based on experience with the Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Based on review of the clinical info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs more information</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LN_Patient_Profiles__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How likely is the KOL to use Patient Profile documents?</inlineHelpText>
        <label>LN Patient Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LN_Study_Leverage__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>How likely is the KOL to leverage Labrinone study findings in peer discussions?</inlineHelpText>
        <label>LN Study Leverage</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medicaid_BMS__c</fullName>
        <inlineHelpText>What percentage of the business (payer) mix in the office is Medicaid?</inlineHelpText>
        <label>Medicaid</label>
        <picklist>
            <picklistValues>
                <fullName>0-10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61-70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>71-80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medicare_BMS__c</fullName>
        <inlineHelpText>What percentage of the business (payer) mix in the office is Medicare?</inlineHelpText>
        <label>Medicare</label>
        <picklist>
            <picklistValues>
                <fullName>0-10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61-70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>71-80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metastatic_patients_treated_per_year_BMS__c</fullName>
        <inlineHelpText>Number of new metastatic patients treated per year (either recurrent metastatic or newly diagnosed metastatic)?</inlineHelpText>
        <label>New metastatic patients per year?</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_to_recieve_new_product_info_BMS__c</fullName>
        <inlineHelpText>How do you like to receive new product information? (check all that apply)</inlineHelpText>
        <label>Method to receive new product info</label>
        <picklist>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer Dialogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tumor Boards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epocrates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMEs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webcasts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile device/Smart Phone</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Most_concerning_YERVOY_sideffect_BMS__c</fullName>
        <inlineHelpText>Which side effect, creates concerns that limits the HCP&apos;s use of YERVOY? (Choose all that apply)</inlineHelpText>
        <label>Most concerning YERVOY side effect?</label>
        <picklist>
            <picklistValues>
                <fullName>GI Toxicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrine Toxicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatic Toxicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatologic Toxicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurological Toxicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Toxicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>My_Sprycel_Patient_Support_Program_BMS__c</fullName>
        <inlineHelpText>How useful does the customer consider the &quot;My Sprycel&quot; Patient Support Program to be?</inlineHelpText>
        <label>&quot;My Sprycel&quot; Patient Support Program</label>
        <picklist>
            <picklistValues>
                <fullName>Not aware of &quot;My Sprycel&quot; Patient Support Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aware of the programs, but don&apos;t see the value in them</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find the support programs useful, but make limited use of them</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find the support programs useful and makes regular use of them</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Based_Learning_Q1_BMS__c</fullName>
        <description>Survey Training - Q1. Best practice is to have description for all fields.</description>
        <inlineHelpText>What are the 3 most important factors when selecting anticoagulant options for your AFib patients?</inlineHelpText>
        <label>Top 3 Factors - Anticoagulant</label>
        <picklist>
            <picklistValues>
                <fullName>Efficacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bleeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other side effects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dosing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed care coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-pays/cost to patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Office_Based_Learning_Q2_BMS__c</fullName>
        <description>See previous question</description>
        <inlineHelpText>What are the top three barriers for prescribing an anticoagulant other than Warfarin for your AFIB patients? (Select all that apply)</inlineHelpText>
        <label>Top 3 Barriers Prescribing Anticoagulant</label>
        <picklist>
            <picklistValues>
                <fullName>Co-pays/cost to patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inability to monitor = disadvantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed care coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not convinced by data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer to wait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resistance to changing therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Side effects</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Office_Based_Learning_Q3_BMS__c</fullName>
        <description>See question 1</description>
        <inlineHelpText>Have you prescribed and anticoagulant other than Warfrin for any other AFib patients?</inlineHelpText>
        <label>Other anticoagulants prescribed</label>
        <picklist>
            <picklistValues>
                <fullName>No (If answered NO, then skip to question 5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oncology_Board__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an example Assessment question</description>
        <inlineHelpText>Does this physician participate in his local Oncology Board?</inlineHelpText>
        <label>Oncology Board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Placed_on_YERVOY_BMS__c</fullName>
        <inlineHelpText>How many unresectable or metastatic melanoma patients have the practice placed since YERVOY launch?</inlineHelpText>
        <label>Placed on YERVOY Since Launch</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Seen_Since_YERVOY_BMS__c</fullName>
        <inlineHelpText>How many unresectable or metastatic melanoma patients have the practice seen since YERVOY launch?</inlineHelpText>
        <label>Seen Since YERVOY Launch</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Business_Payer_BMS__c</fullName>
        <inlineHelpText>What percentage of the business (payer) mix in the office is from other?</inlineHelpText>
        <label>Other Business (Payer)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_First_BMS__c</fullName>
        <label>Other First</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Review_Times_BMS__c</fullName>
        <label>Other Review Times</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Second__c</fullName>
        <label>Other Second</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Suppliers_BMS__c</fullName>
        <label>Other Suppliers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Third_BMS__c</fullName>
        <label>Other Third</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_method_to_receive_new_product_info__c</fullName>
        <label>Other method to receive new product info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_medical_policy_formulary_BMS__c</fullName>
        <inlineHelpText>Does this practice/hospital implement their own medical policy/formulary that may impact product access beyond the policies set by a health plan?</inlineHelpText>
        <label>Own medical policy / formulary?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Patient_Kits_Placed_BMS__c</fullName>
        <inlineHelpText>How many patient kits have been placed in this practice?</inlineHelpText>
        <label>Patient Kits Placed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_types__c</fullName>
        <description>See question 1</description>
        <inlineHelpText>In the last 6 months, for which AFib patient types have you prescribed an anticoagulant other than Warfrin</inlineHelpText>
        <label>AFib patient types</label>
        <picklist>
            <picklistValues>
                <fullName>Difficult to control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newly diagnosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previously diagnosed, but untreated</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Patients_metastatic_Breast_Cancer_BMS__c</fullName>
        <inlineHelpText>Does the prescriber treat patients with metastatic Breast Cancer?</inlineHelpText>
        <label>Patients with metastatic Breast Cancer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Patients_treated_with_IXEMPRA_BMS__c</fullName>
        <inlineHelpText>Approximately how many patients has the prescriber treated with IXEMPRA in the last 6 months?</inlineHelpText>
        <label>Patients treated with IXEMPRA</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_to_use_2nd_Gen_TKIs_in_1st_Line_BMS__c</fullName>
        <inlineHelpText>Do they plan to use 2nd generation TKIs in 1st Line or save them for 2nd Line?</inlineHelpText>
        <label>Plan to use 2nd Gen TKIs in 1st Line?</label>
        <picklist>
            <picklistValues>
                <fullName>Use in 1st Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use in 2nd Line - save them for 2nd, don&apos;t want to run out of options</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Positive_or_Negative_YERVOY_advocate_BMS__c</fullName>
        <inlineHelpText>Is this HCP a positive or negative advocate for YERVOY?</inlineHelpText>
        <label>Positive or Negative YERVOY advocate?</label>
        <picklist>
            <picklistValues>
                <fullName>Very Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuetral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_for_use_of_SPRYCEL_BMS__c</fullName>
        <inlineHelpText>Rate the prescribers potential for use of SPRYCEL.</inlineHelpText>
        <label>Potential for use of SPRYCEL</label>
        <picklist>
            <picklistValues>
                <fullName>Very high</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower than average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low but with potential to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low (Do not include in call plan)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_use_of_ERBITUX_CRC_BMS__c</fullName>
        <inlineHelpText>Rate the prescriber&apos;s potential for use of ERBITUX (CRC)</inlineHelpText>
        <label>Potential use of ERBITUX (CRC)</label>
        <picklist>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower than average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower but with potential to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low (do not include in call plan)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_use_of_ERBITUX_in_SCCHN_BMS__c</fullName>
        <inlineHelpText>Rate the prescriber&apos;s potential for use of ERBITUX in appropriate SCCHN patients.</inlineHelpText>
        <label>Potential use of ERBITUX in SCCHN ptnts?</label>
        <picklist>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low/None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low (do to include in Call Plan)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_use_of_IXEMPRA_BMS__c</fullName>
        <inlineHelpText>Rate the prescriber&apos;s potential for use of IXEMPRA.</inlineHelpText>
        <label>Potential use of IXEMPRA?</label>
        <picklist>
            <picklistValues>
                <fullName>Very high</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower than average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low but with potential to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low (do not include in call plan)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pr_to_use_PRIVATE_inf_clinic_BMS_CA__c</fullName>
        <description>How likely would MD send a MM patient for Tx at PRIVATE infusion clinic?
(Definitely, Definitely not, Might-Might Not, Probably, Probably Not)</description>
        <inlineHelpText>How likely would MD send a MM patient for Tx at PRIVATE infusion clinic?
(Definitely, Definitely not, Might-Might Not, Probably, Probably Not)</inlineHelpText>
        <label>Pr to use PRIVATE inf clinic</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prdct_used_prior_to_formulary_BMS__c</fullName>
        <inlineHelpText>Can a product be used prior to formulary review/inclusion?</inlineHelpText>
        <label>Prdct used prior to formulary rev/incl?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (with paperwork)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (if a product meets unmet medical needs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Pathologist__c</fullName>
        <description>This is an example Assessment question</description>
        <inlineHelpText>Enter the name of the physician&apos;s preferred pathologist</inlineHelpText>
        <label>Preferred Pathologist</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>